fix css for better display on mobile devices

--- a/css/app.css
+++ b/css/app.css
@@ -37,12 +37,40 @@ h1 {
     text-align: center;
     font-size: 2.6em;
 }
+
+@media only screen and (min-width: 90.063em) {
 h1.white {
   font-size: 4em;
   color: white;
   margin-top: 2em;
   margin-bottom: 0;
 }
+}
+@media only screen and (min-width: 64.063em) {
+h1.white {
+  font-size: 4em;
+  color: white;
+  margin-top: 2em;
+  margin-bottom: 0;
+}
+}
+@media only screen and (min-width: 40.063em) {
+h1.white {
+  font-size: 4em;
+  color: white;
+  margin-top: 2em;
+  margin-bottom: 0;
+}
+}
+@media only screen and (max-width: 40em) {
+h1.white {
+  font-size: 4em;
+  color: white;
+  margin-top: .5em;
+  margin-bottom: 0;
+}
+}
+
 .row.full-width {
   width: 100%;
   max-width: 100%;
